Fixed the layout for align-items

--- a/client/src/assets/stylesheets/Board.css
+++ b/client/src/assets/stylesheets/Board.css
@@ -31,7 +31,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        align-items: flex-start;
+        align-items: stretch;
     }
     
     section article:first-child {
@@ -43,7 +43,7 @@
     section article {
         /* flex-grow: 1; */
         /* flex-basis: 0; */
-        /* max-width: 100%; */
+        max-width: 100%;
         /* margin-left: 5px; */
         /* margin-right: 5px; */
 
